src/test/ui/type-alias-impl-trait/auto-trait-leakage2.stderr
error[E0277]: `Rc<u32>` cannot be sent between threads safely
  --> $DIR/auto-trait-leakage2.rs:17:13
   |
LL |     type Foo = impl std::fmt::Debug;
   |                -------------------- within this `impl Debug`
...
LL |     is_send(m::foo());
   |     ------- ^^^^^^^^ `Rc<u32>` cannot be sent between threads safely
   |     |
   |     required by a bound introduced by this call
   |
   = help: within `impl Debug`, the trait `Send` is not implemented for `Rc<u32>`
   = note: required because it appears within the type `impl Debug`
note: required by a bound in `is_send`
  --> $DIR/auto-trait-leakage2.rs:14:15
   |
LL | fn is_send<T: Send>(_: T) {}
   |               ^^^^ required by this bound in `is_send`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
